chore: build latest spec with oapi@0.1.16
