# src/routes.ts
@@ -9,6 +9,10 @@ export type APIRoutes =
 | { method: 'get', path: `/streams/${string}`, parts: 2, params: undefined, response: paths['/streams/{path}']['get']['responses']['200']['content']['application/json'] }
 | { method: 'get', path: '-/streams/{path}', parts: 2, params: undefined, response: paths['/streams/{path}']['get']['responses']['200']['content']['application/json'] }
 | { method: 'post', path: `/streams/reset_token`, parts: 2, params: undefined, response: paths['/streams/reset_token']['post']['responses']['200']['content']['application/json'] }
+| { method: 'put', path: `/streams/${string}/bans/${string}`, parts: 4, params: undefined, response: paths['/streams/{target}/bans/{id}']['put']['responses']['200']['content']['application/json'] }
+| { method: 'put', path: '-/streams/{target}/bans/{id}', parts: 4, params: undefined, response: paths['/streams/{target}/bans/{id}']['put']['responses']['200']['content']['application/json'] }
+| { method: 'delete', path: `/streams/${string}/bans/${string}`, parts: 4, params: undefined, response: undefined }
+| { method: 'delete', path: '-/streams/{target}/bans/{id}', parts: 4, params: undefined, response: undefined }
 | { method: 'get', path: `/users/@me`, parts: 2, params: undefined, response: paths['/users/@me']['get']['responses']['200']['content']['application/json'] }
 | { method: 'put', path: `/users/@me`, parts: 2, params: paths['/users/@me']['put']['requestBody']['content']['application/json'], response: paths['/users/@me']['put']['responses']['200']['content']['application/json'] }
 | { method: 'patch', path: `/users/@me`, parts: 2, params: paths['/users/@me']['patch']['requestBody']['content']['application/json'], response: paths['/users/@me']['patch']['responses']['200']['content']['application/json'] }
