# src/types.ts
@@ -1,8 +1,7 @@
 // This file was auto-generated by @insertish/oapi!
 import { components } from './schema';
 export type Region = components['schemas']['Region'];
-export type DateTimeContainer = components['schemas']['DateTimeContainer'];
-export type DateTime = components['schemas']['DateTime'];
+export type ISO8601_Timestamp = components['schemas']['ISO8601 Timestamp'];
 export type Error = components['schemas']['Error'];
 export type Stream = components['schemas']['Stream'];
 export type Live = components['schemas']['Live'];
@@ -12,6 +11,7 @@ export type AggregateStream = components['schemas']['AggregateStream'];
 export type User = components['schemas']['User'];
 export type SocialLink = components['schemas']['SocialLink'];
 export type Category = components['schemas']['Category'];
+export type Ban = components['schemas']['Ban'];
 export type DataCreateUser = components['schemas']['DataCreateUser'];
 export type DataEditUser = components['schemas']['DataEditUser'];
 export type DataCreateCategory = components['schemas']['DataCreateCategory'];
